--- a/editors/emacs24/Makefile.common
+++ b/editors/emacs24/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.13 2016/12/03 05:00:46 marino Exp $
+# $NetBSD: Makefile.common,v 1.14 2016/12/31 14:16:14 wiz Exp $
 #
 # used by editors/emacs24/Makefile
 # used by editors/emacs24-nox11/Makefile
@@ -68,7 +68,7 @@ fake-libgcc:
 
 .if (${OPSYS} == "NetBSD") && exists(/usr/include/term.h)
 CPPFLAGS+=	-DTERMINFO
-.elif ${OPSYS} == "DragonFly" || ${OPSYS} == "FreeBSD" || ${OPSYS} == "Linux" || ${OPSYS} == "OpenBSD"
+.elif ${OPSYS} == "FreeBSD" || ${OPSYS} == "Linux" || ${OPSYS} == "OpenBSD"
 .include "../../mk/curses.buildlink3.mk"
 .else
 .include "../../mk/termcap.buildlink3.mk"
