--- a/net/aria2/Makefile
+++ b/net/aria2/Makefile
@@ -1,16 +1,16 @@
-# $NetBSD: Makefile,v 1.66 2016/12/12 14:22:03 wiz Exp $
+# $NetBSD: Makefile,v 1.67 2017/01/01 08:42:45 ryoon Exp $
 
-DISTNAME=	aria2-1.19.2
-PKGREVISION=	4
+DISTNAME=	aria2-1.30.0
 CATEGORIES=	net
-MASTER_SITES=	${MASTER_SITE_GITHUB:=tatsuhiro-t/}
+MASTER_SITES=	${MASTER_SITE_GITHUB:=aria2/}
 EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-HOMEPAGE=	http://aria2.sourceforge.net/
+HOMEPAGE=	https://aria2.github.io/
 COMMENT=	Multi-threaded, multi-protocol, flexible download accelerator
 LICENSE=	gnu-gpl-v2
 
+GITHUB_PROJECT=	aria2
 GITHUB_RELEASE=	release-${PKGVERSION_NOREV}
 
 # Minimum requirement is 4.6.4
