--- a/cad/klayout/Makefile
+++ b/cad/klayout/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2016/07/12 13:29:35 mef Exp $
+# $NetBSD: Makefile,v 1.7 2017/01/01 09:15:00 mef Exp $
 
-DISTNAME=	klayout-0.24.8
+DISTNAME=	klayout-0.24.9
 CATEGORIES=	cad
-MASTER_SITES=	http://www.klayout.org/downloads/
+MASTER_SITES=	http://www.klayout.org/downloads/source/
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.klayout.de/
