--- a/databases/p5-DB_File/Makefile
+++ b/databases/p5-DB_File/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.46 2016/07/25 07:36:54 wen Exp $
+# $NetBSD: Makefile,v 1.47 2017/01/01 14:02:54 wiz Exp $
 
-DISTNAME=	DB_File-1.838
+DISTNAME=	DB_File-1.840
 PKGNAME=	p5-${DISTNAME}
 CATEGORIES=	databases perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=DB_File/}
