--- a/lang/Makefile
+++ b/lang/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.448 2016/12/30 22:27:04 alnsn Exp $
+# $NetBSD: Makefile,v 1.449 2017/01/01 14:34:26 adam Exp $
 #
 
 COMMENT=	Programming languages
@@ -184,6 +184,7 @@ SUBDIR+=	py35-html-docs
 SUBDIR+=	python27
 SUBDIR+=	python34
 SUBDIR+=	python35
+SUBDIR+=	python36
 SUBDIR+=	qore
 SUBDIR+=	racket
 SUBDIR+=	racket-textual
