--- a/textproc/p5-Swim/Makefile
+++ b/textproc/p5-Swim/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.10 2016/12/11 07:49:06 wen Exp $
+# $NetBSD: Makefile,v 1.11 2017/01/01 14:38:58 schmonz Exp $
 
-DISTNAME=		Swim-0.1.44
+DISTNAME=		Swim-0.1.45
 PKGNAME=		p5-${DISTNAME}
 CATEGORIES=		textproc perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=../../authors/id/I/IN/INGY/}
