--- a/net/libfilezilla/Makefile
+++ b/net/libfilezilla/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.6 2016/09/12 15:40:13 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2017/01/01 15:42:32 wiz Exp $
 
-DISTNAME=	libfilezilla-0.6.1
+DISTNAME=	libfilezilla-0.9.0
 CATEGORIES=	devel
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=filezilla/}
+MASTER_SITES=	http://download.filezilla-project.org/libfilezilla/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
