--- a/net/filezilla/Makefile
+++ b/net/filezilla/Makefile
@@ -1,11 +1,10 @@
-# $NetBSD: Makefile,v 1.76 2016/12/12 14:22:03 wiz Exp $
+# $NetBSD: Makefile,v 1.77 2017/01/01 15:49:13 wiz Exp $
 
-VERSION=	3.21.0
+VERSION=	3.23.0.2
 DISTNAME=	FileZilla_${VERSION}_src
 PKGNAME=	filezilla-${VERSION}
-PKGREVISION=	2
 CATEGORIES=	net x11
-MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=filezilla/}
+MASTER_SITES=	https://download.filezilla-project.org/client/
 EXTRACT_SUFX=	.tar.bz2
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -30,7 +29,7 @@ GCC_REQD+=		4.9
 .include "../../databases/sqlite3/buildlink3.mk"
 .include "../../devel/libidn/buildlink3.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
-BUILDLINK_API_DEPENDS.libfilezilla+=	libfilezilla>=0.6.1
+BUILDLINK_API_DEPENDS.libfilezilla+=	libfilezilla>=0.9.0
 .include "../../net/libfilezilla/buildlink3.mk"
 BUILDLINK_API_DEPENDS.gnutls+=	gnutls>=3.4.0
 .include "../../security/gnutls/buildlink3.mk"
