--- a/devel/p5-Test-Deep/Makefile
+++ b/devel/p5-Test-Deep/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.30 2016/11/07 14:12:58 mef Exp $
+# $NetBSD: Makefile,v 1.31 2017/01/02 01:13:29 wen Exp $
 
-DISTNAME=		Test-Deep-1.124
+DISTNAME=		Test-Deep-1.126
 PKGNAME=		p5-${DISTNAME}
 CATEGORIES=		devel perl5
 MASTER_SITES=		${MASTER_SITE_PERL_CPAN:=../../authors/id/R/RJ/RJBS/}
