--- a/www/py-flask/Makefile
+++ b/www/py-flask/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.9 2016/08/28 15:48:36 wiz Exp $
+# $NetBSD: Makefile,v 1.10 2017/01/02 11:45:29 wen Exp $
 
-DISTNAME=	Flask-0.11
+DISTNAME=	Flask-0.12
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:tl}
 CATEGORIES=	www python
 MASTER_SITES=	${MASTER_SITE_PYPI:=F/Flask/}
@@ -21,7 +21,7 @@ DEPENDS+=	${PYPKGPREFIX}-werkzeug-[0-9]*:../../www/py-werkzeug
 BUILD_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
 
 do-test:
-	cd ${WRKSRC} && py.test-${PYVERSSUFFIX}
+	cd ${WRKSRC}/tests && py.test-${PYVERSSUFFIX}
 
 .include "../../lang/python/egg.mk"
 .include "../../mk/bsd.pkg.mk"
