--- a/databases/sqlite3-tcl/Makefile
+++ b/databases/sqlite3-tcl/Makefile
@@ -1,6 +1,5 @@
-# $NetBSD: Makefile,v 1.83 2016/12/04 05:17:22 ryoon Exp $
+# $NetBSD: Makefile,v 1.84 2017/01/02 17:52:24 adam Exp $
 
-PKGREVISION= 1
 .include "../../databases/sqlite3/Makefile.common"
 
 PKGNAME=	sqlite3-tcl-${SQLITE3_VERSION}
