--- a/devel/py-curses/Makefile
+++ b/devel/py-curses/Makefile
@@ -1,21 +1,21 @@
-# $NetBSD: Makefile,v 1.42 2015/08/18 07:31:05 wiz Exp $
+# $NetBSD: Makefile,v 1.43 2017/01/02 20:52:47 roy Exp $
 
 PKGNAME=	${PYPKGPREFIX}-curses-${PY_DISTVERSION}
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	devel python
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	http://www.python.org/doc/current/lib/module-curses.html
 COMMENT=	Curses module for Python
 
-USE_NCURSES=	yes
-# needs: filter getsyx getwin has_key immedok mvwinsnstr mvwinsstr ...
-# noqiflush pechochar putp putwin qiflush redrawwin setsyx syncok termattrs
-# termname tigetflag tigetnum tigetstr tparm typeahead use_env wcursyncup
-# wechochar winsnstr winsstr wredrawln wsyncdown wsyncup
 EXTRACT_ELEMENTS=	${PYSUBDIR}/Modules/_cursesmodule.c
 PYDISTUTILSPKG=	yes
 PY_PATCHPLIST=	yes
+
+# NetBSD-8 curses has enough support for py-curses
+USE_CURSES=	getsyx
+# But we build as ncurses still to get the full feature set easily
+FAKE_NCURSES=	yes
 
 PY_SETUP_SUBST=	NCURSESPREFIX=${BUILDLINK_PREFIX.ncurses}
 PYSETUPINSTALLARGS+=	--install-lib ${PREFIX}/${PYLIB}/lib-dynload
@@ -30,5 +30,5 @@ do-patch:
 
 .include "../../lang/python/extension.mk"
 .include "../../lang/python/srcdist.mk"
-.include "../../devel/ncurses/buildlink3.mk"
+.include "../../mk/curses.buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
