--- a/devel/msgpack/Makefile
+++ b/devel/msgpack/Makefile
@@ -1,7 +1,7 @@
 # $NetBSD: Makefile,v 1.8 2015/03/15 16:47:19 hiramatsu Exp $
 #
 
-DISTNAME=	msgpack-2.0.0
+DISTNAME=	msgpack-2.1.0
 CATEGORIES=	devel
 MASTER_SITES=	https://github.com/msgpack/msgpack-c/releases/download/cpp-${PKGVERSION_NOREV}/
 
@@ -18,5 +18,6 @@ PKGCONFIG_OVERRIDE=	msgpack.pc.in
 .include "options.mk"
 
 CMAKE_ARGS+=	-DCMAKE_BUILD_TYPE:STRING=Release
+CMAKE_ARGS+=	-DMSGPACK_BUILD_EXAMPLES:BOOL=OFF
 
 .include "../../mk/bsd.pkg.mk"
